--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
+
+    
+    "build:web": "vite build",
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "@google/model-viewer": "^4.1.0",
