--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "rest-express",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
-  "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "dev": "vite",
+    "build": "vite build",
+    "build:web": "vite build",
+    "vercel-build": "vite build",
     "check": "tsc",
     "db:push": "drizzle-kit push"
-
-    
-    "build:web": "vite build",
-    "vercel-build": "vite build"
   },
   "dependencies": {
     "@google/model-viewer": "^4.1.0",
